alpm-srcinfo/tests/parse_error_snapshots/unexpected_pkgbase_property.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n    pkgver = 1.0.0\n\tpkgrel = 1\n    bogus_field = lol\n\npkgname = test\n"
expression: "format!(\"{error}\")"
---
File parsing error:
parse error at line 4, column 5
  |
4 |     bogus_field = lol
  |     ^
invalid package base property
expected one of the allowed pkgbase properties
